# task-3

./: .gitignore  README.rst  pyproject.toml
notebooks/: locations.ipynb  pytorch_mlp.ipynb  sklearn_mlp.ipynb
shipsnet/: data.py  viz.py
