[tool.poetry]
name = "shipsnet"
version = "0.1.0"
description = "Binary classifiers for detecting ships in satellite imagery"
authors = ["marshrossney <17361029+marshrossney@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
